working on trinity seller training tab

--- a/blog.html
+++ b/blog.html
@@ -87,9 +87,12 @@
                             </div>
                         </div>
                         <p>
-                            Learn How You Can Upload Your Products And Services On Trinity Balaji Portal. Make Your Product Or
-                            Services Live On Trinity Balaji. Grow Your Business On Trinity Balaji With Our Trinity Balaji Portal Training. A Complete
-                            Virtual And Personalized Trinity Balaji Seller Training Course For All The Trinity Balaji Sellers.
+                            Learn How You Can Upload Your Products And Services On Trinity Balaji Portal. Make Your
+                            Product Or
+                            Services Live On Trinity Balaji. Grow Your Business On Trinity Balaji With Our Trinity
+                            Balaji Portal Training. A Complete
+                            Virtual And Personalized Trinity Balaji Seller Training Course For All The Trinity Balaji
+                            Sellers.
                         </p>
                     </div>
                     <div class="col-xl-4 col-lg-5 col-md-8 offset-md-1 offset-sm-1">
@@ -204,15 +207,19 @@
                         <div class="about-caption mb-50">
 
                             <p>
-                                Currently, Trinity Balaji Portal Skills are one of the highest required in the market. Each and
-                                every company working with government organizations needs an employee who is a Trinity Balaji
+                                Currently, Trinity Balaji Portal Skills are one of the highest required in the market.
+                                Each and
+                                every company working with government organizations needs an employee who is a Trinity
+                                Balaji
                                 Expert that’s why everyone is learning about Trinity Balaji.
                             <ul class="pl-5">
                                 <li><i class="fas fa-check blueiconcolor"></i> Easy To Learn</li>
                                 <li><i class="fas fa-check blueiconcolor"></i> High Demand In Market</li>
-                                <li><i class="fas fa-check blueiconcolor"></i> Trinity Balaji Is Future Of Tendering</li>
+                                <li><i class="fas fa-check blueiconcolor"></i> Trinity Balaji Is Future Of Tendering
+                                </li>
                                 <li><i class="fas fa-check blueiconcolor"></i> Work From Virtual Locations</li>
-                                <li><i class="fas fa-check blueiconcolor"></i> Start Your Own Business With Trinity Balaji</li>
+                                <li><i class="fas fa-check blueiconcolor"></i> Start Your Own Business With Trinity
+                                    Balaji</li>
                             </ul>
 
                             </p>
@@ -292,7 +299,7 @@
                         </div>
 
                     </div>
-                   
+
                 </div>
             </div>
         </section>
@@ -314,41 +321,64 @@
                             <!-- Section Tittle -->
 
                             <div class="text-center custom-width-70">
-                            <p>
-                                We are known for our training sessions. Our experts are training people regularly. GeM Portal Seller training for those who want to grow their business on gem.
-                                <br/><br/>
-                                <u class="orangeunderline">EXPLORE OUR SERVICES
-                                    READ OUR BLOG
-                                    MEET OUR TEAM</u>
-                            </p>
-                        </div>
-                            <div class="row">
+                                <p>
+                                    We are known for our training sessions. Our experts are training people regularly.
+                                    GeM Portal Seller training for those who want to grow their business on gem.
+                                    <br /><br />
+                                    <u class="orangeunderline">EXPLORE OUR SERVICES
+                                        READ OUR BLOG
+                                        MEET OUR TEAM</u>
+                                </p>
+                            </div>
+                            <div class="row p-2">
                                 <div class="col-md-4">
-                                    <div class="card border-0 text-center">
+                                    <div class="card">
                                         <div class="card-body">
-                                            <h2 class="card-title">
-                                                Welcome Every Client</h2>
-                                            <p class="card-text">Book your session timing with us.</p>
+                                            <div class="row">
+                                                <div class="col-md-10 pt-5">
+                                                    <h1 class="card-title font-weight-bold">
+                                                        Welcome Every Client</h1>
+                                                    <p class="card-text">Book your session timing with us.
+                                                    </p>
+                                                </div>
+                                                <div class="col-md-2"> <span class="display-1 font-weight-bold orangetextcolor">1</span>
+                                                </div>
+                                            </div>
+
+
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="col-md-4">
-                                    <div class="card border-0 text-center">
+                                    <div class="card">
                                         <div class="card-body">
-                                            <h2 class="card-title">
-                                                Execute with Empathy</h2>
-                                            <p class="card-text">Start taking your sessions with us.</p>
+                                            <div class="row">
+                                                <div class="col-md-10 pt-5">
+                                                    <h1 class="card-title font-weight-bold">
+                                                        Execute with Empathy</h1>
+                                                    <p class="card-text">Start taking your sessions with us.
+                                                    </p>
+                                                </div>
+                                                <div class="col-md-2"> <span class="display-1 font-weight-bold orangetextcolor">2</span>
+                                                </div>
+                                            </div>   
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-4">
-                                    <div class="card border-0 text-center">
+                                    <div class="card">
                                         <div class="card-body">
-                                            <h2 class="card-title">
-                                                Make them Experts</h2>
-                                            <p class="card-text text-rght">Start handling your gem account as pro.</p>
-                                        </div>
+                                            <div class="row">
+                                                <div class="col-md-10 pt-5">
+                                                    <h1 class="card-title font-weight-bold">
+                                                        Make them Experts</h1>
+                                                    <p class="card-text">Start handling your gem account as pro.
+                                                    </p>
+                                                </div>
+                                                <div class="col-md-2"> <span class="display-1 font-weight-bold orangetextcolor">3</span>
+                                                </div>
+                                            </div>   </div>
                                     </div>
                                 </div>
                             </div>
@@ -361,6 +391,79 @@
         </section>
 
 
+
+
+
+
+        <section class="about-low-area section-padding40">
+            <div class="container">
+
+                <div class="row">
+                    <div class="col-xs-12 col-lg-12 col-md-10">
+                        <div class="section-title mb-35">
+                            <h1 class="text-center">
+                                Why Choose Our Trinity Balaji Seller Training Sessions
+                            </h1>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row justify-content-center">
+                    <div class="col-xs-12 col-lg-12 col-md-10">
+                        <div class="section-title mb-35">
+                            <h2 class="text-center">
+                                
+Easy to understand
+                            </h2>
+                            <p class="text-center">Our trainers can speak in Hindi and English.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center pl-100 pr-100 mb-30">
+                    <div class="col-md-6">
+                        <div class="card border-0">
+                            <div class="card-body">
+                                <h2 class="card-title display-6  vertical-text-center"><i class="far fa-check-circle fa-2x mr-4 orangeiconcolor"></i>  Real Time Training</h2>
+<p>We provide live training on your computer/laptop.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card border-0">
+                            <div class="card-body">
+                                <h2 class="card-title display-6  vertical-text-center"><i class="far fa-clipboard fa-2x mr-4 orangeiconcolor"></i>  Daily Training Report</h2>
+<p>Everyday our trainers submit a report of training.
+
+</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-between pl-100 pr-100 mb-30">
+                    <div class="col-md-6">
+                        <div class="card border-0">
+                            <div class="card-body">
+                                <h2 class="card-title display-6  vertical-text-center"><i class="fas fa-map-marker-alt fa-2x mr-4 orangeiconcolor"></i>
+                                        Fast Results of Training</h2>
+                                        <p>After training you will become a gem expert.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                    <div class="card border-0">
+                        <div class="card-body">
+                            <h2 class="card-title display-6  vertical-text-center"><i class="far fa-clipboard fa-2x mr-4 orangeiconcolor"></i>  Secured Online Payments</h2>
+<p>After training you will become a gem expert. 
+
+</p>
+                        </div>
+                    </div>
+                </div>
+
+                </div>
+            </div>
+            </div>
+        </section>
 
     </main>
 
