--- a/header.html
+++ b/header.html
@@ -131,7 +131,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto ml-auto text-center font-weight-bold">
         <li class="nav-item active px-4">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item px-4">
           <a class="nav-link" href="about.html">Our Products</a>
