--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Trinity Balaji</title>
+    <title>Industrial | Teamplate</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-<!--     <link rel="manifest" href="site.webmanifest"  crossorigin="use-credentials">
- -->    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
 
     <!-- CSS here -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -26,31 +25,9 @@
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/nice-select.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>    
-
-    <link rel="stylesheet" href="assets/css/bootstrap-5.0.2-dist/css/bootstrap.min.css">
-    <!-- Font Awesome -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-<!-- Google Fonts -->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
-
-<!-- Bootstrap core CSS -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
-<!-- Material Design Bootstrap -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
-<!-- JQuery -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<!-- Bootstrap tooltips -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
-<!-- Bootstrap core JavaScript -->
-<!-- MDB core JavaScript -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
-<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-   
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
-    <script src="assets/css/bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+ 
     <script>
         $(function(){
             $('#header').load("header.html");
@@ -62,7 +39,7 @@
 </head>
 
 <body>
-    <div id="header"></div>
+   
     <!-- ? Preloader Start -->
     <div id="preloader-active">
         <div class="preloader d-flex align-items-center justify-content-center">
@@ -74,7 +51,7 @@
             </div>
         </div>
     </div>
-    
+    <div id="header"></div>
     <main>
    
         <!--? slider Area Start-->
@@ -150,7 +127,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="col">
-                                                <button type="button" class="btn-primary1 ">EXPLORE NOW</button>
+                                                <button type="button" class="btn-primary1 white-text">EXPLORE NOW</button>
                                             </div>
                                         </div>
 
@@ -932,7 +909,7 @@
                                 All GeM portal services at a single place.
                             <div class="row">
                                 <div class="col text-center">
-                                    <button type="button" class="btn-primary1">EXPLORE PACKAGES</button>
+                                    <button type="button" class="btn-primary1 white-text">EXPLORE PACKAGES</button>
                                 </div>
                             </div>
                             </p>
@@ -1504,7 +1481,7 @@
                                 Moradabad, Gurgaon, Aligarh, Jalandhar or some other cities in India.
                                 <div class="row">
                                     <div class="col text-center">
-                                        <button type="button" class="btn-primary1 ">Start Now</button>
+                                        <button type="button" class="btn-primary1 white-text">Start Now</button>
                                     </div>
                                 </div>
                             </p>
