trinity training tab completed

--- a/blog.html
+++ b/blog.html
@@ -760,10 +760,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="card">
-                            <img src="assets/img/trinity/Pic31.png" alt="">
+                <div class="row justify-content-center mb-4">
+                    <div class="col-md-4">
+                        <div class="card border-0">
+                            <img src="assets/img/trinity/maleicon.png" alt="" style="width: 30%; height: auto;" class="pl-2 pt-2">
                             <div class="card-body">
                                 <h5 class="card-title orangetextcolor">CO-FOUNDER (TRINITY EXPERT)
                                 </h5>
@@ -776,9 +776,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="card">
-                            <img src="assets/img/trinity/Pic31.png" alt="">
+                    <div class="col-md-4">
+                        <div class="card border-0">
+                            <img src="assets/img/trinity/maleicon.png" alt="" style="width: 30%; height: auto;" class="pl-2 pt-2">
                             <div class="card-body">
                                 <h5 class="card-title orangetextcolor">CO-FOUNDER (TRINITY EXPERT)
                                 </h5>
@@ -792,15 +792,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row mb-4 justify-content-center p-4">
                     <div class="col-md-4">
-                        <div class="card">
-                            <img src="assets/img/trinity/Pic31.png" alt="">
+                        <div class="card border-0">
+                            <img src="assets/img/trinity/managericon" alt="" style="width: 30%; height: auto;">
                             <div class="card-body">
-                                <h5 class="card-title orangetextcolor">CO-FOUNDER (TRINITY EXPERT)
+                                <h5 class="card-title orangetextcolor">MANAGER (TRINITY EXPERT)
                                 </h5>
-                                <h2 class="font-weight-bold">Neeraj Kumar</h2>
-                                <p class="card-text">Digital Marketer & Trinity Balaji Expert</p>
+                                <h2 class="font-weight-bold">Rahul Kumar</h2>
+                                <p class="card-text">Trinity Balaji Portal Expert & Sales Manager</p>
                                 <i class="fab fa-facebook-f iconWrapper"></i>
                                 <i class="fab fa-linkedin-in iconWrapper"></i>
                                 <i class="fab fa-instagram iconWrapper"></i>
@@ -809,13 +809,13 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="card">
-                            <img src="assets/img/trinity/Pic31.png" alt="">
+                        <div class="card border-0">
+                            <img src="assets/img/trinity/expert.jpg" alt="" style="width: 30%; height: auto;">
                             <div class="card-body">
-                                <h5 class="card-title orangetextcolor">CO-FOUNDER (TRINITY EXPERT)
+                                <h5 class="card-title orangetextcolor">TRINITY EXPERT
                                 </h5>
-                                <h2 class="font-weight-bold">Deepak Kumar</h2>
-                                <p class="card-text">Trinity Balaji Portal Expert & CA </p>
+                                <h2 class="font-weight-bold">Rohit Singh</h2>
+                                <p class="card-text">Trinity Balaji Portal Expert & Trainer</p>
                                 <i class="fab fa-facebook-f iconWrapper"></i>
                                 <i class="fab fa-linkedin-in iconWrapper"></i>
                                 <i class="fab fa-instagram iconWrapper"></i>
@@ -824,13 +824,13 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="card">
-                            <img src="assets/img/trinity/Pic31.png" alt="">
+                        <div class="card border-0">
+                            <img src="assets/img/trinity/expert.jpg" alt="" style="width: 30%; height: auto;">
                             <div class="card-body">
-                                <h5 class="card-title orangetextcolor">CO-FOUNDER (TRINITY EXPERT)
+                                <h5 class="card-title orangetextcolor">TRINITY EXPERT
                                 </h5>
-                                <h2 class="font-weight-bold">Deepak Kumar</h2>
-                                <p class="card-text">Trinity Balaji Portal Expert & CA </p>
+                                <h2 class="font-weight-bold">Ravi Kumar</h2>
+                                <p class="card-text">Trinity Balaji Portal Expert & Trainer </p>
                                 <i class="fab fa-facebook-f iconWrapper"></i>
                                 <i class="fab fa-linkedin-in iconWrapper"></i>
                                 <i class="fab fa-instagram iconWrapper"></i>
@@ -909,6 +909,75 @@
             </div>
             </div>
         </section>
+
+
+
+        <section class="about-low-area section-padding40 mb-50 mt-50" >
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-5 col-lg-5 col-md-8 offset-md-1 offset-sm-1">
+
+                        <div>
+                            <img src="assets/img/trinity/Pic36.png" alt="">
+                        </div>
+
+                    </div>
+                    <div class="col-xl-6 col-lg-7 col-md-9">
+                        <h2 class="display-4 font-weight-bold text-center mb-30">
+                            More Contacts
+                        </h2>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="card border-0">
+                                    <div class="card-body">
+                                        <h2 class="card-title display-6  vertical-text-center"><i
+                                                class="far fa-check-circle fa-2x mr-4 orangeiconcolor"></i> Call Us
+                                        </h2>
+                                        <p class=>+919465954570</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="card border-0">
+                                    <div class="card-body">
+                                        <h2 class="card-title display-6  vertical-text-center"><i
+                                                class="far fa-clipboard fa-2x mr-4 orangeiconcolor"></i> Email Us
+                                        </h2>
+                                        <p class="orangetextcolor">navzansolutions@gmail.com
+        
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center">
+                            <div class="col-md-6">
+                                <div class="card border-0">
+                                    <div class="card-body">
+                                        <h2 class="card-title display-6  vertical-text-center"><i
+                                                class="far fa-check-circle fa-2x mr-4 orangeiconcolor"></i> 
+                                                Location
+                                        </h2>
+                                        <p class="orangetextcolor ml-55">Punjab</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="card border-0">
+                                    <div class="card-body">
+                                        <i class="fab fa-facebook-f iconWrapper"></i>
+                                        <i class="fab fa-linkedin-in iconWrapper"></i>
+                                        <i class="fab fa-instagram iconWrapper"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <div id="footer"></div>
     <!--? Search model Begin -->
