trinity training tab images rearranged

--- a/blog.html
+++ b/blog.html
@@ -295,7 +295,7 @@
                     <div class="col-xl-5 col-lg-5 col-md-8 offset-md-1 offset-sm-1 pt-10">
 
                         <div>
-                            <img src="assets/img/trinity/Pic23.png" alt="">
+                            <img src="assets/img/trinity/Pic28.png" alt="">
                         </div>
 
                     </div>
@@ -483,7 +483,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic28.png" alt="">
+                                <img src="assets/img/trinity/Pic29.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -529,7 +529,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic29.png" alt="">
+                                <img src="assets/img/trinity/Pic30.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -546,7 +546,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic30.png" alt="">
+                                <img src="assets/img/trinity/Pic31.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -592,7 +592,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic31.png" alt="">
+                                <img src="assets/img/trinity/Pic32.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -609,7 +609,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic32.png" alt="">
+                                <img src="assets/img/trinity/Pic33.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -742,7 +742,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic33.png" alt="">
+                                <img src="assets/img/trinity/Pic34.png" alt="" style="width: 80%; height: auto;">
                             </div>
                         </div>
                     </div>
@@ -865,7 +865,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic32.png" alt="">
+                                <img src="assets/img/trinity/Pic35.png" alt="">
                             </div>
                         </div>
                     </div>
