loader  fixed and made reusable

--- a/blog.html
+++ b/blog.html
@@ -943,7 +943,7 @@
                                         <h2 class="card-title display-6  vertical-text-center"><i
                                                 class="far fa-clipboard fa-2x mr-4 orangeiconcolor"></i> Email Us
                                         </h2>
-                                        <p class="orangetextcolor">navzansolutions@gmail.com
+                                        <p class="orangetextcolor">trinity@gmail.com
         
                                         </p>
                                     </div>
