--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         $(function(){
             $('#header').load("header.html");
             $('#footer').load("header.html");
+            $('#loader').load("loader.html");
+            
 
         });
     </script>
@@ -40,17 +42,7 @@
 
 <body>
     
-    <!-- ? Preloader Start -->
-    <div id="preloader-active">
-        <div class="preloader d-flex align-items-center justify-content-center">
-            <div class="preloader-inner position-relative">
-                <div class="preloader-circle"></div>
-                <div class="preloader-img pere-text">
-                    <h1>Loading....</h1>
-                </div>
-            </div>
-        </div>
-    </div>
+   <div id="loader"></div>
     <div id="header"></div>
     <main>
    
