--- a/about.html
+++ b/about.html
@@ -33,10 +33,22 @@
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/nice-select.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+<script>
+     $(function () {
+        $('#loader').load("loader.html");
+        $('#header').load("header.html");
+        $('#footer').load("footer.html");
+       
+
+    });
+</script>
 </head>
 
 <body>
-    <div id="loader"></div>
+   
     <div id="header"></div>
     <main>
 
