--- a/blog.html
+++ b/blog.html
@@ -59,18 +59,7 @@
 </head>
 
 <body>
-    <!-- ? Preloader Start -->
-    <div id="preloader-active">
-        <div class="preloader d-flex align-items-center justify-content-center">
-            <div class="preloader-inner position-relative">
-                <div class="preloader-circle"></div>
-                <div class="preloader-img pere-text">
-                    <a href="index.html"><img class="trinity_logo" src="assets/img/logo/trinity_logo.png" alt=""></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Preloader Start -->
+   <div id="loader"></div>
     <div id="header"></div>
     <main>
 
