--- a/elements.html
+++ b/elements.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Industrial | Teamplate</title>
+	<title>Trinity Balaji</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
@@ -83,18 +83,7 @@
                                     </div>
                                 </div>
                             </div> 
-                            <div class="col-xl-1 col-lg-2">
-                                <!-- Search Box -->
-                                <div class="search d-none d-lg-block">
-                                    <ul>
-                                        <li>
-                                            <div class="nav-search search-switch">
-                                                <span class="fas fa-search"></span>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
+                           
                             <!-- Mobile Menu -->
                             <div class="col-12">
                                 <div class="mobile_menu d-block d-lg-none"></div>
